--- a/Card-matching.v2/index.html
+++ b/Card-matching.v2/index.html
@@ -4,86 +4,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" conetent="width-device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <title>카드 뒤집기</title>
+    <title>카드 뒤집기.v2</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <script src="./script.js" defer></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script> -->
 </head>
 <body>
     <div class="wrap">
         <div class="main">
-            <h2>카드 뒤집기</h2>
+            <h2>카드 뒤집기.v2</h2>
             <a class="button btnPush btnBlueGreen" href="javascript:void(0)">START</a>
         </div>
         <div class="card_section" style="display:none;">
             <ul>
-                <li class="card01">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
                     </div>
                 </li>
-                <li class="card03">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
                     </div>
                 </li>
-                <li class="card04">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
                     </div>
                 </li>
-                <li class="card02">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
                     </div>
                 </li>
-                <li class="card01">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
                     </div>
                 </li>
-                <li class="card05">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
                     </div>
                 </li>
-                <li class="card05">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
                     </div>
                 </li>
-                <li class="card06">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
                     </div>
                 </li>
-                <li class="card03">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
                     </div>
                 </li>
-                <li class="card06">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
                     </div>
                 </li>
-                <li class="card02">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
                     </div>
                 </li>
-                <li class="card04">
+                <li>
                     <div class="card_wrap">
                         <div class="front"></div>
                         <div class="back"></div>
