--- a/Card-matching.v2/index.html
+++ b/Card-matching.v2/index.html
@@ -89,6 +89,42 @@
                         <div class="back"></div>
                     </div>
                 </li>
+                <li>
+                    <div class="card_wrap">
+                        <div class="front"></div>
+                        <div class="back"></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card_wrap">
+                        <div class="front"></div>
+                        <div class="back"></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card_wrap">
+                        <div class="front"></div>
+                        <div class="back"></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card_wrap">
+                        <div class="front"></div>
+                        <div class="back"></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card_wrap">
+                        <div class="front"></div>
+                        <div class="back"></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card_wrap">
+                        <div class="front"></div>
+                        <div class="back"></div>
+                    </div>
+                </li>
             </ul>
         </div>
         <div class="result" style="display:none;">
